# Attention_GRU

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt  train.ipynb  train.py
data/: drone_states.csv  trajectory_loader.py
models/: attention_bi_gru_predictor.py  attention_bi_lstm_predictor.py  attention_gru_predictor.py  attention_lstm_predictor.py  gru_predictor.py  hierarchial_attention_gru_predictor.py  hierarchical_attention_bi_gru_predictor.py  lstm_predictor.py  modified_attention_bi_gru_predictor.py
multi_traj_predict/data/: trajectory_loader.py
multi_traj_predict/models/: attention_bi_gru_predictor.py  gru_predictor.py  rnn_predictor.py
multi_traj_predict/utils/: logger.py  loss_calculator.py  model_evaluator.py  plot_generator.py  plot_timestep_errors.py
notebooks/: train.ipynb
scripts/: inference.py  train.py
utils/: logger.py  loss_calculator.py  model_evaluator.py  plot_generator.py  scaler.py
